[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/SettingScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Piximisa.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Game_theme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/images/Title Screen Buttons/TitleSETTINGS-01.png" type="Texture" id=4]
[ext_resource path="res://Scripts/effects_volume.gd" type="Script" id=5]
[ext_resource path="res://Scripts/music_volume.gd" type="Script" id=6]
[ext_resource path="res://Assets/images/GameScreenButtons/SettingsBackground.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 63
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 2 )

[node name="SettingScreen" type="Control" groups=["persist"]]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 120.414 ]
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1000, 2000 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 120.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_right = 1000.0
margin_bottom = 150.0
texture = ExtResource( 4 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 1000.0
margin_bottom = 1880.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 120
alignment = 1

[node name="Back" type="MenuButton" parent="VBoxContainer/VBoxContainer"]
margin_top = 457.0
margin_right = 1000.0
margin_bottom = 529.0
custom_fonts/font = SubResource( 1 )
text = "Back"
items = [ "Item 0", null, 0, false, false, 0, 0, null, "", false ]

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 649.0
margin_right = 1000.0
margin_bottom = 1273.0
custom_constants/separation = 100

[node name="music" type="Label" parent="VBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 1000.0
margin_bottom = 62.0
size_flags_vertical = 1
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
text = "Music Volume"
align = 1
valign = 1

[node name="music_volume" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 1000.0
margin_bottom = 262.0
custom_constants/separation = 50
alignment = 1
script = ExtResource( 6 )

[node name="off" type="Button" parent="VBoxContainer/VBoxContainer/VBoxContainer/music_volume"]
margin_left = 224.0
margin_right = 324.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
text = "OFF"

[node name="low" type="Button" parent="VBoxContainer/VBoxContainer/VBoxContainer/music_volume"]
margin_left = 374.0
margin_right = 474.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
text = "LOW"

[node name="med" type="Button" parent="VBoxContainer/VBoxContainer/VBoxContainer/music_volume"]
margin_left = 524.0
margin_right = 624.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
text = "MED"

[node name="high" type="Button" parent="VBoxContainer/VBoxContainer/VBoxContainer/music_volume"]
margin_left = 674.0
margin_right = 776.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
text = "HIGH"

[node name="effects" type="Label" parent="VBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 362.0
margin_right = 1000.0
margin_bottom = 424.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
text = "Effects Volume"
align = 1

[node name="effects_volume" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 524.0
margin_right = 1000.0
margin_bottom = 624.0
custom_constants/separation = 50
alignment = 1
script = ExtResource( 5 )

[node name="off" type="Button" parent="VBoxContainer/VBoxContainer/VBoxContainer/effects_volume"]
margin_left = 224.0
margin_right = 324.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
text = "OFF"

[node name="low" type="Button" parent="VBoxContainer/VBoxContainer/VBoxContainer/effects_volume"]
margin_left = 374.0
margin_right = 474.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
text = "LOW"

[node name="med" type="Button" parent="VBoxContainer/VBoxContainer/VBoxContainer/effects_volume"]
margin_left = 524.0
margin_right = 624.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
text = "MED"

[node name="high" type="Button" parent="VBoxContainer/VBoxContainer/VBoxContainer/effects_volume"]
margin_left = 674.0
margin_right = 776.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
toggle_mode = true
text = "HIGH"

[connection signal="pressed" from="VBoxContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer/VBoxContainer/music_volume/off" to="VBoxContainer/VBoxContainer/VBoxContainer/music_volume" method="_on_off_toggled"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer/VBoxContainer/music_volume/low" to="VBoxContainer/VBoxContainer/VBoxContainer/music_volume" method="_on_low_toggled"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer/VBoxContainer/music_volume/med" to="VBoxContainer/VBoxContainer/VBoxContainer/music_volume" method="_on_med_toggled"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer/VBoxContainer/music_volume/high" to="VBoxContainer/VBoxContainer/VBoxContainer/music_volume" method="_on_high_toggled"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer/VBoxContainer/effects_volume/off" to="VBoxContainer/VBoxContainer/VBoxContainer/effects_volume" method="_on_off_toggled"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer/VBoxContainer/effects_volume/low" to="VBoxContainer/VBoxContainer/VBoxContainer/effects_volume" method="_on_low_toggled"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer/VBoxContainer/effects_volume/med" to="VBoxContainer/VBoxContainer/VBoxContainer/effects_volume" method="_on_med_toggled"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer/VBoxContainer/effects_volume/high" to="VBoxContainer/VBoxContainer/VBoxContainer/effects_volume" method="_on_high_toggled"]
